--- a/encrypter.html
+++ b/encrypter.html
@@ -16,7 +16,6 @@
 .subBtn {
     padding: 10px 30px;
     font-size: 16px;
-    background-color: transparent;
     margin: 0 0 0 10px;
 }
 
@@ -46,7 +45,7 @@
 
         <section id="mainHold">
             <section class="card1">
-                <span class="greenclr">En</span>crypter:<br><br>
+                Encrypter:<br><br>
                 <form class="form1 flex" action="/encrypt" method="post">
                     <input id="text1" name="text1" class="web1" type="text" placeholder="Enter text" autocomplete="off" required>
                     <button class="subBtn greenbtn" type="submit">Encrypt</button>
@@ -54,7 +53,7 @@
             </section>
 
             <section class="card1">
-                <span class="blueclr">De</span>crypter:<br><br>
+                Decrypter:<br><br>
                 <form action="/decrypt" method="post">
                     <input id="enText" name="enText" class="web1" type="text" placeholder="Enter encrypted text" autocomplete="off" required><br><br>
                     <section class="flex">
