Minor color and text fix

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@ body {
 .btn1 {
     float: right;
     padding: 10px;
-    margin: 0 0 10px 10px;
+    font-size: 18px;
+    margin: -10px 0 10px 10px;
     color: var(--blue1);
     cursor: pointer;
 }
@@ -166,8 +167,7 @@ body {
 
         <section class="sec clr3">
             <section class="card2">
-                Added dark & light mode in every tool for more customisation.<br>
-                Just click the 'sun' icon at top right corner after clicking 'Open tool'.
+                Added dark & light mode in every tool for more customisation. Just click the sun icon at top right corner after clicking 'Open'.
             </section>
         </section>
 
