--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
 .card2 {
     margin: 70px auto;
     max-width: 500px;
-    line-height: 1.3;
+    line-height: 1.4;
 }
 
 .card2 section {
@@ -135,12 +135,8 @@ body {
 }
 
 .card2 svg {
-    float: right;
-    margin: 50px -80px 4px 4px;
-}
-
-#svgAdd1 svg {
-    margin: -20px 20px 4px 4px;
+    margin: 0 auto 40px auto;
+    display: block;
 }
 
 </style>
@@ -231,9 +227,8 @@ for(i=0; i<arr1.length; i++){
     }
     getId('mainSec').innerHTML += `
         <section style="background-color: var(--back${i+2})" class="sec">
-            <section class="card2">
+            <section class="card2">${arr1[i][3]}
                 <span class="btn1" onclick="window.open('/${arr1[i][0]}', '_self')">Open</span>
-                ${arr1[i][3]}
                 <section class="text2">${arr1[i][1]}</section>
                 <section>
                     <ul>${pTemp}</ul>
