--- a/blocker.html
+++ b/blocker.html
@@ -158,6 +158,7 @@
     background-color: var(--dark3);
     max-height: 100px;
     overflow-y: scroll;
+    word-wrap: break-word;
 }
 
 #webList .redclr {
@@ -174,6 +175,7 @@
     max-height: 200px;
     padding: 2px 10px;
     overflow-y: scroll;
+    word-wrap: break-word;
 }
 
 #blockA {
@@ -347,7 +349,10 @@ function createMode1(){
         const d1 = new Date();
         id1 = String(d1.getFullYear())+String(d1.getMonth())+String(d1.getDate())+String(d1.getHours())+String(d1.getMinutes())+String(d1.getSeconds())+String(d1.getMilliseconds())
         modeNum= Number(localStorage.getItem('modeNum'))+1;
-        localStorage.setItem(`mode${modeNum}`, JSON.stringify([prompt('Enter mode name:'), 0, val2, id1]));
+        do {
+            nameM1 = prompt('Enter mode name:');
+        } while (nameM1==null || nameM1=='');
+        localStorage.setItem(`mode${modeNum}`, JSON.stringify([nameM1, 0, val2, id1]));
         localStorage.setItem("modeNum", modeNum);
         getId('listHold').innerHTML='';
         getArr1();
@@ -433,10 +438,22 @@ function showModes(){
     }
 }
 
+//isValidUrl credit: https://stackoverflow.com/questions/5717093/check-if-a-javascript-string-is-a-url
+
+const isValidUrl = urlString=> {
+	  	var urlPattern = new RegExp('^(https?:\\/\\/)?'+ 
+	    '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|'+ 
+	    '((\\d{1,3}\\.){3}\\d{1,3}))'+ 
+	    '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*'+ 
+	    '(\\?[;&a-z\\d%_.~+=-]*)?'+ 
+	    '(\\#[-a-z\\d_]*)?$','i'); 
+	  return !!urlPattern.test(urlString);
+	}
+
 getId("form1").addEventListener("submit", event=>{
     event.preventDefault();
     val1 = getId('web1').value;
-    if ((val1.includes(".com") || val1.includes(".in")) && val1.length>4 && !val1.includes(" ")){
+    if (isValidUrl(val1)){
         getId('listHold').innerHTML += `${val1}<br>`;
     }
     else {
