Just a lil modification

--- a/blocker.html
+++ b/blocker.html
@@ -244,7 +244,7 @@
             </section>
 
             <!--Hidden form to submit the list added-->
-            <form action="/block" id="form2" class="noneD" method="post">
+            <form action="block.html" id="form2" class="noneD">
                 <input id="webList3" name="webList3" required>
                 <input id="listID" name="listID" required>
                 <input id="action1" name="action1" required>
